--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -353,10 +353,11 @@ html.highlight-links a:focus {
   outline: 3px solid #ff0000 !important;
 }
 
-/* Big Cursor Mode */
+/* Big Cursor Mode - Simple large arrow cursor */
 html.big-cursor,
 html.big-cursor * {
-  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 24 24' fill='%23000'%3E%3Cpath d='M5.5 3.21V20.8c0 .45.54.67.85.35l4.86-4.86a.5.5 0 0 1 .35-.15h6.87a.5.5 0 0 0 .35-.85L6.35 2.86a.5.5 0 0 0-.85.35z'/%3E%3C/svg%3E") 0 0, default !important;
+  /* Simple 32x32 arrow cursor - smaller inline SVG */
+  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32'%3E%3Cpath d='M4 4v24l8-8h12z' fill='%23000' stroke='%23fff' stroke-width='2'/%3E%3C/svg%3E") 4 4, default !important;
 }
 
 html.big-cursor a,
@@ -364,5 +365,6 @@ html.big-cursor button,
 html.big-cursor [role="button"],
 html.big-cursor input[type="submit"],
 html.big-cursor input[type="button"] {
-  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 24 24' fill='%23000'%3E%3Cpath d='M13 19c0 .34.04.67.09 1H4a2 2 0 0 1-2-2V6c0-1.1.9-2 2-2h16a2 2 0 0 1 2 2v7.09c-.33-.05-.66-.09-1-.09-3.31 0-6 2.69-6 6m4-10V9H7v1h10Z'/%3E%3Cpath d='M20 15v3h3v2h-3v3h-2v-3h-3v-2h3v-3z'/%3E%3C/svg%3E") 0 0, pointer !important;
+  /* Simple 32x32 hand pointer cursor */
+  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32'%3E%3Cpath d='M10 8v14l4-4 3 6 3-1-3-6h5l-12-9z' fill='%23000' stroke='%23fff' stroke-width='2'/%3E%3C/svg%3E") 10 8, pointer !important;
 }
